--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon server/server.js",
     "start": "node server/server.js",
-    "build": "cd client && npm install && npm run build"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "type": "module",
   "keywords": [],
